# cealn

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  build.cealn  build.py  rust-toolchain.toml  rustfmt.toml  workspace.cealn
.cargo/: config.toml
.github/workflows/: ci.yaml
crates/action/: Cargo.toml
crates/action/context/: Cargo.toml
crates/action/context/src/: lib.rs
crates/action/docker/: Cargo.toml
crates/action/docker/src/: config.rs  lib.rs
crates/action/executable/: Cargo.toml  build.rs
crates/action/executable/linux-interceptor/: Cargo.toml
crates/action/executable/linux-interceptor/src/: lib.rs  libc.rs
crates/action/executable/macos-guest/: Cargo.toml
crates/action/executable/macos-guest/src/: main.rs  util.rs
crates/action/executable/macos-guest/src/arch/: aarch64.rs
crates/action/executable/macos-sys/: Cargo.toml  build.rs  wrapper.h
crates/action/executable/src/: lib.rs  stdio.rs
crates/action/executable/src/platform/: linux.rs  macos.rs
crates/action/executable/src/platform/linux/: fuse.rs  interceptor.rs  namespaces.rs
crates/action/executable/src/platform/linux/namespaces/: sys.rs
crates/action/executable/src/platform/macos/: linux_kernel.rs  linux_process.rs  linux_thread.rs  mman.rs  process.rs  sys.rs  thread.rs  vfs.rs  vm.rs
crates/action/executable/tests/: simple_execute.rs  util.rs
crates/action/extract/: Cargo.toml
crates/action/extract/src/: lib.rs
crates/action/git/: Cargo.toml
crates/action/git/src/: lib.rs
crates/action/net/: Cargo.toml
crates/action/net/src/: lib.rs
crates/action/src/: depmap.rs  lib.rs
crates/action/test-util/: Cargo.toml
crates/action/test-util/src/: lib.rs  test_context.rs
crates/cache/: Cargo.toml
crates/cache/src/: action.rs  depmap.rs  fs.rs  hashing.rs  hot_disk.rs  lib.rs
crates/cache/src/platform/: linux.rs  macos.rs
crates/cli-support/: Cargo.toml  build.rs
crates/cli-support/src/: console.rs  lib.rs  logging.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/src/platform/: linux.rs  macos.rs
crates/compose/: Cargo.toml
crates/compose/src/: main.rs  volume.rs
crates/core/: Cargo.toml
crates/core/src/: files.rs  lib.rs  libc.rs  macos.rs  ptr.rs  tracing.rs
crates/core/src/fs/: linux.rs  macos.rs  mod.rs  unix.rs  windows.rs
crates/data/: Cargo.toml
crates/data/derive-provider-serde/: Cargo.toml
crates/data/derive-provider-serde/src/: lib.rs
crates/data/src/: action.rs  cache.rs  depmap.rs  file_entry.rs  label.rs  lib.rs  package.rs  reference.rs  rule.rs  workspace.rs
crates/data/src/action/: docker.rs  exec.rs  extract.rs  git.rs  net.rs
crates/data/src/label/: path.rs
crates/depset/: Cargo.toml
crates/depset/src/: depmap.rs  lib.rs  registry.rs
crates/docker/: Cargo.toml
crates/docker/src/: config.rs  lib.rs
crates/driver/: Cargo.toml  entitlements.xml
crates/driver/src/: main.rs
crates/event/: Cargo.toml
crates/fs/: Cargo.toml
crates/fs/materialize/: Cargo.toml
crates/fs/materialize/src/: lib.rs
crates/fs/materialize/src/platform/: linux.rs  macos.rs
crates/fs/src/: lib.rs
crates/fs/src/platform/: linux.rs  macos.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/proto/: event.proto  file.proto  workspace_builder.proto
crates/protocol/src/: event.rs  file.rs  lib.rs  query.rs  workspace.rs  workspace_builder.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime-data/: Cargo.toml
crates/runtime-python/: Cargo.toml  README.md  Setup.local  build.py  build.rs  config.site
crates/runtime-python-embed/: Cargo.toml  README.md  build.rs
crates/runtime-python-embed/src/: lib.rs
crates/runtime-python-embed/tests/: basic_python.rs
crates/runtime-python/patches/: 0004-add_wasi_host.patch
crates/runtime-python/src/: abi.rs  error.rs  lib.rs  libc_ext.rs  main.rs  package.rs  python.rs  rule.rs  workspace.rs
crates/runtime-python/stub_headers/: fcntl.h  signal.h  unistd.h
crates/runtime-python/stub_headers/bits/: signal.h
crates/runtime-python/stub_headers/sys/: stat.h
crates/runtime-virt/: Cargo.toml
crates/runtime-virt/src/fs/: memory_tar.rs  mod.rs  null.rs  pipe.rs  print.rs
crates/runtime-virt/src/fs/system/: mod.rs  tests.rs  unix.rs  windows.rs
crates/runtime/src/: instance.rs  interpreter.rs  lib.rs  template.rs
crates/runtime/src/api/: mod.rs  wasi.rs
crates/runtime/src/api/wasi/: abi.rs  fs.rs
crates/runtime/witx/: typenames.witx
crates/server/: Cargo.toml  test_cache_config.toml
crates/server/src/: action.rs  error.rs  executor.rs  lib.rs  package.rs  rule.rs  test_util.rs  vfs.rs  workspace.rs
crates/server/src/api/: mod.rs  request.rs
crates/server/src/builder/: mod.rs
crates/server/src/graph/: action.rs  graph.rs  mod.rs  node.rs  result.rs
crates/server/src/graph/node/: action.rs  file_type.rs  output.rs  package.rs  rule.rs  target.rs  target_exists.rs  workspace.rs
crates/server/src/runtime/: cache.rs  logger.rs  mod.rs
crates/server/src/vfs/: named_workspaces.rs
crates/server/test-support/copy_rule/: workspace.cealn
crates/server/test-support/copy_rule/my_package/: build.cealn
crates/server/test-support/copy_rule/my_package/rules/: copy.py
crates/source/: Cargo.toml
crates/source/fs/: Cargo.toml
crates/source/fs/src/: lib.rs
crates/source/src/: entry.rs  lib.rs  reference.rs  source_monitor.rs  watcher.rs
crates/source/src/platform/: linux.rs
crates/test-util/: Cargo.toml
crates/test-util-macro/: Cargo.toml
crates/test-util/src/: lib.rs
crates/test-util/src/fs/: linux.rs  macos.rs  mod.rs  windows.rs
pythonlib/tests/: .pylintrc  env_util.py  test_label.py  test_reflect.py  test_rule.py
rules/cc/: workspace.cealn
rules/cmake/: workspace.cealn
rules/compose/: Cargo.toml  workspace.cealn
rules/compose/support/: Cargo.toml
rules/compose/support/src/: main.rs
rules/cue/: workspace.cealn
rules/docker/: Cargo.toml  workspace.cealn
rules/dotnet/: workspace.cealn
rules/go/: workspace.cealn
rules/js/: Cargo.toml  build.cealn  workspace.cealn
rules/julia/: workspace.cealn
(+111 files in other folders)
