[package]
name = "cealn-cache"
version = "0.0.0"
edition = "2021"

[dependencies]
cealn-core = { path = "../core" }
cealn-data = { path = "../data" }
cealn-depset = { path = "../depset" }
cealn-fs = { path = "../fs" }

anyhow.workspace = true
async-trait = "0.1.68"
bytes = "1.4"
cfg-if = "0.1.10"
hex = "0.4.3"
lazy_static = "1.4"
futures = { version = "0.3.5", features = ["thread-pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1.18"
tracing-futures = "0.2.4"
ring = "0.16.20"
compio-core = { workspace = true }
compio-fs = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.74"

[dev-dependencies]

tempfile = "3.2"
