[package]
name = "cealn-client"
version = "0.0.0"
edition = "2021"

[dependencies]
cealn-core = { path = "../core" }
cealn-data = { path = "../data" }
cealn-protocol = { path = "../protocol" }

anyhow.workspace = true
cfg-if = "0.1.10"
futures = "0.3.5"
thiserror = "1.0"
tokio = { version = "1.0", features = ["time"] }
tonic = "0.9.1"
tracing = "0.1.19"
tracing-futures = "0.2.4"
url = "2.1"
which = "4.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2.74"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.9.1"
