[package]
name = "cealn-core"
version = "0.0.0"
edition = "2021"

[features]
default = ["std"]
std = ["tracing/std", "ring", "libc/std", "thiserror"]

[dependencies]
clap = "4.2"
tracing = { version = "0.1.19", default-features = false, features = ["attributes"] }
ring = { version = "0.16.15", optional = true }
cfg-if = "0.1.10"
thiserror = { version = "1.0", optional = true }

compio-fs = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.74", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["fileapi"] }
