[package]
name = "cealn-data"
version = "0.0.0"
edition = "2021"

[dependencies]
cealn-data-derive-provider-serde = { path = "derive-provider-serde" }

hex = "0.4.3"
indexmap = { version = "1.9", features = ["serde"] }
lazy_static = "1.0"
jsonpath-rust = "0.3.0"
regex = "1.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "0.8.1", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = "0.16.20"
