[package]
name = "cealn-fs"
version = "0.0.0"
edition = "2021"

[dependencies]
cealn-core = { path = "../core" }
cealn-data = { path = "../data" }
cealn-depset = { path = "../depset" }
cealn-protocol = { path = "../protocol" }
cealn-event = { path = "../event" }

anyhow.workspace = true
cfg-if = "1.0"
futures = "0.3.5"
hex = "0.4.3"
rand = "0.8.4"
tracing = "0.1.19"
compio-fs = { workspace = true, features = ["io-uring"] }
compio-executor.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2.74"
