[package]
name = "cealn-protocol"
version = "0.0.0"
edition = "2021"

[dependencies]
cealn-core = { path = "../core" }
cealn-data = { path = "../data" }

anyhow.workspace = true
byteorder = "1.3"
cfg-if = "0.1.10"
chrono = "0.4.15"
prost = "0.11.8"
prost-types = "0.11.8"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
tonic = "0.9.1"
tracing = "0.1.19"

[build-dependencies]
tonic-build = "0.9.1"
