[package]
name = "cealn-runtime-virt"
version = "0.0.0"
edition = "2021"

[dependencies]
cealn-core = { path = "../core" }
cealn-runtime = { path = "../runtime" }

compio-core = { workspace = true }
compio-fs = { workspace = true }

async-trait = "0.1.68"
cfg-if = "0.1.10"
futures = "0.3.5"
tar = "0.4.29"
thiserror = "1.0"
tracing = "0.1.19"

[target.'cfg(unix)'.dependencies]
libc = "0.2.74"

[target.'cfg(target_os = "windows")'.dependencies]
winhandle = "0.3.0"
winapi = { version = "0.3.9", features = ["fileapi", "ioapiset", "winioctl"] }
widestring = "0.4.3"

[dev-dependencies]
cealn-test-util = { path = "../test-util" }