[package]
name = "cealn-runtime"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
cealn-runtime-data = { path = "../runtime-data" }

anyhow.workspace = true
async-trait = "0.1.68"
byteorder = "1.3"
dashmap = { workspace = true }
futures = "0.3.5"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1.19"
wasmtime = { version = "7.0", default-features = false, features = ["cranelift", "async", "parallel-compilation", "cache"] }
wiggle = { version = "7.0", features = ["wasmtime_async"] }
