[package]
name = "cealn-action-context"
version = "0.0.0"
edition = "2021"

[dependencies]
cealn-data = { path = "../../data" }
cealn-depset = { path = "../../depset" }
cealn-protocol = { path = "../../protocol" }
cealn-event = { path = "../../event" }
cealn-fs = { path = "../../fs" }
cealn-fs-materialize = { path = "../../fs/materialize" }

anyhow.workspace = true
async-trait = "0.1.68"
futures = "0.3.5"
reqwest = { workspace = true }
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2"
