[package]
name = "cealn-fs-materialize"
version = "0.0.0"
edition = "2021"

[dependencies]
cealn-core = { path = "../../core" }
cealn-data = { path = "../../data" }
cealn-depset = { path = "../../depset" }
cealn-protocol = { path = "../../protocol" }
cealn-event = { path = "../../event" }
cealn-cache = { path = "../../cache" }
cealn-fs = { path = "../../fs" }

anyhow.workspace = true
async-trait = "0.1.68"
cfg-if = "1.0"
dashmap = { workspace = true }
futures = "0.3.5"
hex = "0.4.3"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.19"
compio-core = { workspace = true }
compio-fs = { workspace = true }
compio-executor = { path = "../../../../public/compio/compio-executor" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.74"
