[package]
name = "cealn-rules-compose-support"
version = "0.0.0"
edition = "2018"

[dependencies]
cealn-rules-compose-data = { path = "../data" }

clap = { version = "4.2", features = ["derive"] }
hex = "0.4.2"
glob = "0.3.1"
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.21"
oci-spec = "0.6.0"